# frame

./: .gitignore  .ignore  .roadmap-screen-studio-clone.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  biome.json  package.json
.beads/: issues.jsonl
.beads/artifacts/bd-13v/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-1c0/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-299/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-2f8/: prd.json  prd.md  progress.txt  spec.md
.beads/artifacts/bd-2g1/: prd.json  prd.md  progress.txt  spec.md
.beads/artifacts/bd-317/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-3cv/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-3lk/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-3t5/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-3vd/: prd.md
.beads/artifacts/bd-66j/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-cdx/: prd.json  prd.md  progress.txt
.beads/artifacts/bd-iyk/: prd.json  prd.md  progress.txt
.beads/artifacts/core-3/: delegation.md
.beads/artifacts/core-5/: delegation.md
.beads/artifacts/core-8/: delegation.md
.beads/artifacts/core-9/: delegation.md
.beads/artifacts/frame-design/: design.md
.beads/artifacts/tauri-migration/: design.md  screen-studio-roadmap.md
apps/desktop/: AGENTS.md  Cargo.toml
apps/desktop-swift/: AGENTS.md  project.yml
apps/desktop-swift/Frame/: Frame.entitlements  Info.plist
apps/desktop-swift/Frame.xcodeproj/: project.pbxproj
apps/desktop-swift/Frame/App/: AppState.swift  FrameApp.swift
apps/desktop-swift/Frame/Captions/: CaptionOverlayView.swift  WhisperTranscription.swift
apps/desktop-swift/Frame/Effects/: ZoomEngine.swift
apps/desktop-swift/Frame/Export/: AGENTS.md  ExportConfig.swift  ExportEngine.swift  GIFExporter.swift
apps/desktop-swift/Frame/Models/: Project.swift  RecordingConfig.swift
apps/desktop-swift/Frame/Overlay/: AGENTS.md  AreaSelectionPanel.swift  FloatingPanel.swift  OverlayManager.swift  RecordingToolbarPanel.swift  WebcamPreviewPanel.swift
apps/desktop-swift/Frame/Playback/: AudioWaveformGenerator.swift  PlaybackEngine.swift  VideoPlayerView.swift
apps/desktop-swift/Frame/Recording/: AGENTS.md  CursorRecorder.swift  KeystrokeRecorder.swift  RecordingCoordinator.swift  ScreenRecorder.swift  WebcamCaptureEngine.swift
apps/desktop-swift/Frame/Resources/: GenerateWallpaperThumbnails.swift
apps/desktop-swift/Frame/Resources/Assets.xcassets/WallpaperThumbnails/: Contents.json
apps/desktop-swift/Frame/Utilities/: MicLevelMonitor.swift  Permissions.swift
apps/desktop-swift/Frame/Views/: AGENTS.md  ContentView.swift
apps/desktop-swift/Frame/Views/Components/: MicLevelBar.swift
apps/desktop-swift/Frame/Views/Editor/: CursorOverlayView.swift  EditorView.swift  KeystrokeOverlayView.swift  PreviewCanvas.swift  TimelineView.swift  TranscriptEditor.swift  WebcamOverlayView.swift
apps/desktop-swift/Frame/Views/Editor/Inspector/: AudioInspector.swift  BackgroundInspector.swift  CaptionsInspector.swift  CursorInspector.swift  InspectorComponents.swift  KeyboardInspector.swift  WebcamInspector.swift  ZoomInspector.swift
apps/desktop-swift/Frame/Views/Export/: ExportView.swift
apps/desktop-swift/Frame/Views/Recording/: RecordingView.swift  SourcePicker.swift
apps/desktop-swift/Frame/Views/Shared/: ToolbarItems.swift
apps/desktop/src/: app.rs  clipboard.rs  main.rs
apps/desktop/src/recording/: mod.rs
apps/desktop/src/ui/: main.rs  mod.rs  toolbar.rs
docs/: API.md  CONTRIBUTING.md  README.md  SETUP.md  SWIFT-BEST-PRACTICES.md
docs/plans/: 2025-02-06-webcam-mirror-observation-fix.md  2026-02-08-display-selection-fix.md
tests/: integration_tests.rs
