[workspace]
members = [
    "apps/desktop",
    "packages/core",
    "packages/ui-components",
    "packages/renderer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Frame Team <team@frame.app>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frame/frame"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
iced_aw = { version = "0.9", default-features = false, features = ["menu", "modal", "card"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Screen capture (macOS)
screencapturekit = { version = "1.5", features = ["async", "macos_13_0"] }
core-graphics = "0.24"
core-foundation = "0.10"

# Audio
cpal = "0.15"
rubato = "0.14"

# Video encoding
ffmpeg-next = "6.1"
ffmpeg-sidecar = "2.4"

# Audio file writing
hound = "3.5"

# GPU
wgpu = "0.19"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
