[package]
name = "frame-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Frame - Beautiful screen recorder for developers"

[[bin]]
name = "frame"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
iced = { workspace = true }
iced_aw = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local dependencies
frame-core = { path = "../../packages/core", default-features = false }
frame-ui = { path = "../../packages/ui-components" }
uuid = { workspace = true }
chrono = { workspace = true }
arboard = "3.2"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { workspace = true, optional = true }
core-graphics = { workspace = true, optional = true }
core-foundation = { workspace = true, optional = true }
objc = "0.2"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["capture"]
capture = ["screencapturekit", "core-graphics", "core-foundation", "frame-core/capture", "frame-core/encoding"]
stub-capture = ["frame-core/stub-capture", "frame-core/encoding"]  # UI testing without real capture
pro = ["frame-core/pro"]
